# on-prem-builder

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  HABITAT_2_TESTING_GUIDE.md  LICENSE-NOTICE  MAINTAINERS.md  NOTICE  README.md  Vagrantfile  artifactory.md  bldr.env.sample  builder-automate.md  habitat_install.md  install.md  install.sh  minio-migration.md  postgres.md  uninstall.sh
.github/: copilot-instructions.md
docs-chef-io/: go.mod
on-prem-docs/: README.MD  artifactory.md  bootstrap-core.md  builder-automate.md  builder-example.md  builder-oauth.md  config.toml  getting-started.md  license.md  logs.md  migration.md  minio.md  postgres.md  scaling.md  separating-backend-services.md  troubleshooting.md  update-habitat.md  upgrading.md  warm-spare.md
package_seed_lists/: README.md  builder_x86_64-linux_lts_2024  builder_x86_64-linux_stable  core_aarch64-linux_stable  core_deps_x86_64-linux_stable  core_full_x86_64-linux_kernel2_stable  core_full_x86_64-linux_stable  core_full_x86_64-windows_stable  effortless_x86_64-linux_stable  effortless_x86_64-linux_unstable  effortless_x86_64-windows_stable  effortless_x86_64-windows_unstable
pkg-sync/: README.md  main.go  plan.sh
pkg-tool/: README.md  build.sh  main.go  main.ts  plan.sh
quickstart_lists/: README.md  builder_x86_64-linux_stable  core_deps_x86_64-linux_stable  core_full_x86_64-linux_kernel2_stable  core_full_x86_64-linux_stable  core_full_x86_64-windows_stable  effortless_x86_64-linux_stable  (+3 more)
tools/: Cargo.toml
tools/src/: builder_api.rs  error.rs  fetch_expand_cmd.rs  main.rs  package_spec.rs
(+151 files in other folders)
